[project]
name = "ragas"
version = "0.1.8"
dependencies = [
    "numpy",
    "datasets",
    "tiktoken",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain_openai",
    "openai>1",
    "pysbd>=0.3.4",
    "nest-asyncio",
    "appdirs",
]
readme = "README.md"
dynamic = ["readme"]

[project.optional-dependencies]
all = [
    "sentence-transformers",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/plain"}

[tool.ruff.lint]
ignore = ["E501"]

[tool.setuptools_scm]
write_to = "src/ragas/_version.py"
