[project]
name = "ragas"
version = "0.1.8"  # Hardcoded version
dependencies = [
    "numpy",
    "datasets",
    "tiktoken",
    "langchain",
    "langchain-core",
    "langchain-community",
    "langchain_openai",
    "openai>1",
    "pysbd>=0.3.4",
    "nest-asyncio",
    "appdirs",
]
readme = "README.md"
dynamic = ["readme"]

[project.optional-dependencies]
all = [
    "sentence-transformers",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"
